[package]
name = "poseidon252"
version = "0.1.0"
authors = ["zer0 <matteo@dusk.network>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "1.0.1", features = ["serde", "avx2_backend"] }
lazy_static = "1.3.0"
rand = "0.6"

[dependencies.bulletproofs]
git = "https://gitlab.dusk.network/dusk-core/bulletproofs"
branch = "thread"
features = ["yoloproofs"]

[profile.release]
lto = true
incremental = false
codegen-units = 1
# rustflags = "-C target_feature=+avx2"
